# mybar

./: Cargo.toml  build.rs
assets/: icon_map.json
src/: data.rs  layout.rs  logging.rs  main.rs  render.rs  style.rs  theme.rs
src/data/: linux.rs  macos.rs  mod.rs  wm_bridge.rs
src/platform/: linux.rs  macos.rs  mod.rs
src/render/: linux.rs  metal.rs  mod.rs
src/widgets/: aerospace.rs  battery.rs  clock.rs  mod.rs  network.rs  now_playing.rs  perf.rs  wm.rs
src/wm/: aerospace.rs  mod.rs  noop.rs
