[package]
name = "mybar"
version = "0.1.0"
edition = "2024"

[dependencies]
battery = "0.7.8"
chrono = "0.4.42"
iced = { version = "0.14.0", features = ["tokio"] }
iced_fonts = { version = "0.3.0", features = ["lucide"] }
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = [
    "NSApplication",
    "NSAppearance",
    "NSColor",
    "NSScreen",
    "NSView",
    "NSWindow",
] }
objc2-foundation = { version = "0.3.2", features = ["objc2-core-foundation"] }
raw-window-handle = "0.6.2"
sysinfo = "0.37.0"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
