[package]
name = "mybar"
version = "0.2.0"
edition = "2024"

[dependencies]
# Rendering (textlayout for all; metal added on macOS via target deps)
skia-safe = { version = "0.93", features = ["textlayout"] }

# Windowing
winit = "0.30"
raw-window-handle = "0.6.2"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "time", "process", "macros", "sync", "fs"] }

# Data sources
battery = "0.7.8"
chrono = "0.4.42"
sysinfo = "0.37.0"

[target.'cfg(target_os = "macos")'.dependencies]
skia-safe = { version = "0.93", features = ["metal", "textlayout"] }
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = [
    "NSApplication",
    "NSAppearance",
    "NSColor",
    "NSScreen",
    "NSView",
    "NSWindow",
] }
objc2-foundation = { version = "0.3.2", features = ["objc2-core-foundation"] }
objc2-metal = "0.3"
objc2-quartz-core = { version = "0.3", features = ["CAMetalLayer", "CALayer", "objc2-metal"] }
objc2-core-foundation = "0.3"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
